feat: integra meus anuncios com contratos v3
