# backend/src/main/java/br/com/topsdojob/v3/application/publico/anunciante/dto/MeuAnuncioCapaDto.java
@@ -1,0 +1,6 @@
+package br.com.topsdojob.v3.application.publico.anunciante.dto;
+
+public record MeuAnuncioCapaDto(
+        String urlPublica,
+        boolean restrita) {
+}
