# backend/src/main/java/br/com/topsdojob/v3/application/publico/anunciante/dto/MeuAnuncioLocalizacaoDto.java
@@ -1,0 +1,9 @@
+package br.com.topsdojob.v3.application.publico.anunciante.dto;
+
+public record MeuAnuncioLocalizacaoDto(
+        String uf,
+        String cidade,
+        String cidadeSlug,
+        String bairro,
+        String bairroSlug) {
+}
